@@ -8,6 +8,6 @@ public class Util {
      * Format errno to string using {@link Lib#strerror}
      */
     public static String errnoString(int error) {
-        return Lib.strerror(error).getUtf8String(0);
+        return Lib.strerror(error).getString(0);
     }
 }
